<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome to the Games Rating App!</string>
    <string name="welcome2">Click Start to start rating :)</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rateGame">Rate the following game from 1 to 5 stars!</string>
    <string name="summary">To summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startOver">Start over</string>
    <string name="gameText">%d</string>
</resources>